user info can load into sql aldy but i havent figure out how to generate random id for user without repeating. will do later. but sql database can works from my side

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /target/
-flyway.config
+# Ignore Flyway config with credentials
+flyway.conf
+# Ignore db properties with credentials
+db.properties
