--- a/pom.xml
+++ b/pom.xml
@@ -25,17 +25,11 @@
                 <version>10.17.0</version> 
                 <configuration>
                     
-                    <locations>
-                        <location>filesystem:src/main/resources/db/migration</location>
-                    </locations>
+                    <configFiles>
+                        <configFile>flyway.conf</configFile>
+                    </configFiles>
+
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>8.0.33</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
