--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 flyway.conf
 # Ignore db properties with credentials
 db.properties
+# Ignore User Data File, each time pull new empty file. 
+Data/UserData.txt
