updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-Data/UserData.txt
 .env
 /target/
 # Ignore Flyway config with credentials
@@ -6,3 +5,4 @@ flyway.conf
 # Ignore db properties with credentials
 db.properties
 # Ignore User Data File, each time pull new empty file. 
+UserData.txt
