--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version> 
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
